--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -1,3 +1,6 @@
 <link href="./style/css/footer.min.css" rel="stylesheet">
 
-<p>a</p>
+<ul>
+    <li><p>©️ Bartek Oskam 2021</p></li>
+    <li><p>Cool Page setup thing</p></li>
+</ul>
