--- a/style/scss/footer.scss
+++ b/style/scss/footer.scss
@@ -7,6 +7,8 @@ footer {
     margin-left: auto;
     margin-right: auto;
 
+    margin-top: 1.5rem;
+
     background-color: burlywood;
 
     >section {
@@ -16,8 +18,29 @@ footer {
 
         text-align: center;
 
-        > * {
-            margin-bottom: 0;
+        > ul {
+            list-style: none;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            margin: 0;
+            
+            display: flex;
+            align-content: center;
+            align-items: center;
+            justify-content: space-evenly;
+
+            gap: 1.5rem;
+
+            > li > p {
+                display: block;
+                padding-top: .5rem;
+                padding-bottom: .5rem;
+
+                margin: 0;
+
+                color: white;
+                text-decoration: none;
+            }
         }
     }
 }
