--- a/style/scss/header.scss
+++ b/style/scss/header.scss
@@ -6,7 +6,7 @@ header {
 
     background-color: cadetblue;
 
-    >section {
+    > nav {
         margin-left: auto;
         margin-right: auto;
 
