Made relative links not relative
./ to /

--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -1,4 +1,4 @@
-<link href="./style/css/footer.min.css" rel="stylesheet">
+<link href="/style/css/footer.min.css" rel="stylesheet">
 
 <ul>
     <li><p>©️ Bartek Oskam 2021</p></li>
