--- a/views/parts/header.phtml
+++ b/views/parts/header.phtml
@@ -1,4 +1,4 @@
-<link href="./style/css/header.min.css" rel="stylesheet">
+<link href="/style/css/header.min.css" rel="stylesheet">
 
 <ul>
     <li><a href="/">Homepage</a></li>
